SERVER-31953 Target secondary application of updates and deletes by just _id

(cherry picked from commit b6235c8418faf541af93e9caacc22b7ed9aed817)